; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_gdbarch.c_deprecated_current_gdbarch_select_hack.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_gdbarch.c_deprecated_current_gdbarch_select_hack.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.gdbarch = type { i32 }

@current_gdbarch = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @deprecated_current_gdbarch_select_hack(%struct.gdbarch* %0) #0 {
  %2 = alloca %struct.gdbarch*, align 8
  store %struct.gdbarch* %0, %struct.gdbarch** %2, align 8
  %3 = load %struct.gdbarch*, %struct.gdbarch** %2, align 8
  %4 = icmp ne %struct.gdbarch* %3, null
  %5 = zext i1 %4 to i32
  %6 = call i32 @gdb_assert(i32 %5)
  %7 = load i32*, i32** @current_gdbarch, align 8
  %8 = icmp ne i32* %7, null
  %9 = zext i1 %8 to i32
  %10 = call i32 @gdb_assert(i32 %9)
  %11 = load %struct.gdbarch*, %struct.gdbarch** %2, align 8
  %12 = getelementptr inbounds %struct.gdbarch, %struct.gdbarch* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = call i32 @gdb_assert(i32 %13)
  %15 = call i32 (...) @current_gdbarch_swap_out_hack()
  %16 = load %struct.gdbarch*, %struct.gdbarch** %2, align 8
  %17 = call i32 @current_gdbarch_swap_in_hack(%struct.gdbarch* %16)
  %18 = call i32 (...) @architecture_changed_event()
  ret void
}

declare dso_local i32 @gdb_assert(i32) #1

declare dso_local i32 @current_gdbarch_swap_out_hack(...) #1

declare dso_local i32 @current_gdbarch_swap_in_hack(%struct.gdbarch*) #1

declare dso_local i32 @architecture_changed_event(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
